--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 group = 'org.edward'
-version = '1.0-SNAPSHOT'
+version = '1.0'
 
 repositories {
     mavenCentral()
@@ -21,6 +21,6 @@ test {
 
 jar {
     manifest {
-        attributes 'Main-Class': 'org.edward.Main'
+        attributes 'Main-Class': 'com.edwardhicks.chess.ChessMain'
     }
 }
